Added proper console messages in gamerunner